# schema-verification-risc0-v1.2.2

./: README.md
risc0/: Cargo.toml
risc0/projects/: Cargo.toml
risc0/projects/encrypt-aesgcm/: Cargo.toml  README.md
risc0/projects/encrypt-aesgcm/core/: Cargo.toml
risc0/projects/encrypt-aesgcm/core/src/: lib.rs
risc0/projects/encrypt-aesgcm/methods/: Cargo.toml
risc0/projects/encrypt-aesgcm/methods/guest/: Cargo.toml
risc0/projects/encrypt-aesgcm/methods/guest/src/: main.rs
risc0/projects/encrypt-aesgcm/res/: data.json  data_array.json  data_failcase.json  receipt_aesgcm_groth16.json  receipt_groth16.json  schema.json  schema_complex_obj.json
risc0/projects/encrypt-aesgcm/src/: main.rs
risc0/projects/json-validate/: Cargo.toml
risc0/projects/json-validate/benches/: bench.rs
risc0/projects/json-validate/core/: Cargo.toml
risc0/projects/json-validate/methods/: Cargo.toml
risc0/projects/json-validate/methods/guest/: Cargo.toml
risc0/projects/json-validate/methods/guest/src/: main.rs
risc0/projects/json-validate/res/: data_complex_obj.json  receipt.json  receipt_complex.json  receipt_groth16.json  schema_array.json
risc0/projects/json-validate/src/: main.rs
risc0/projects/json-verify/: Cargo.toml  README.md
risc0/projects/json-verify/res/: receipt.json  receipt_groth16.json
risc0/projects/json-verify/src/: main.rs
