[package]
name = "json-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { path = "../../risc0/zkvm" }
serde = "1.0"
serde_json = "1.0"
jsonschema = {version = "0.8", default-features = false}

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]


[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "prove"
harness = false
path = "benches/bench.rs"