[package]
name = "check_schema"
version = "0.12.0"
edition = "2021"

[workspace]

[dependencies]
serde = "1.0"
serde_json = "1.0"
jsonschema = {version = "0.8", default-features = false}

json = "0.12"
json-validate-core = { path = "../../core" }
risc0-zkvm = { version = "1.2.2", path = "../../../../risc0/zkvm", default-features = false, features = [
  "std",
] }
alloy-sol-types = { version = "=0.8.5" }
sha2 = "0.10"